[package]
name = "box-render"
version = "0.1.0"
edition = "2021"
authors = ["WASM Company Developers <support@wasmcompany.com>"]
description = "A simple WASM module using wgpu to render a box."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wgpu = "0.16.1"
winit = "0.28.6"
log = "0.4.19"
env_logger = "0.10.0"
cfg-if = "1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.16"} #, features = ["webgl"]}
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
