[package]
name = "model-utils"
version = "0.1.0"
edition = "2021"
authors = ["WASM Company Developers <support@wasmcompany.com>"]
description = "Basic utilities for creating polygons and polyhedrons"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.11", features=["derive"]}
